deployments/pathweb/workloads/home-network/wyoming-piper/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wyoming-piper
  namespace: home-network
spec:
  selector:
    app.kubernetes.io/name: wyoming-piper
  ports:
  - port: 10200
    targetPort: 10200
    name: wyoming
    protocol: TCP
